Did some updates

--- a/flipkart/.env
+++ b/flipkart/.env
@@ -1,4 +1,4 @@
 # this is work offline (local work)
-VITE_BASE_URL='http://localhost:4000'
+#basically a env is passed in Vercel variables with the backend URL by onrender
+VITE_BASE_URL=http://localhost:4000
 
-# basically a env is passed in Vercel variables with the backend URL by onrender
